# VisuSat

./: .gitignore  CHANGELOG.md  COPYRIGHT  MANIFEST.in  README.md  main.py  makefile  pyproject.toml  requirements.txt
data/: eumetsat_products.json
dev/: main.py  main_video.py  main_video_2.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/examples/: eumetsat_animation.rst  eumetsat_customisation.rst
docs/source/installation/: installation.rst
docs/source/src/: plotting.rst
examples/: demo_copernicus_globmodel.py  demo_eumetsat_animation.py  demo_eumetsat_customisation.py  main.py  main_copernicus.py
inputs/: id_EUMETSAT_template.json
src/: copernicus.py  eumetsat.py  eumetsat_products_registry.py  utils.py
src/visusat/: __init__.py  copernicus.py  eumetsat.py  eumetsat_products_registry.py  plotting.py  utils.py
